(tabs) fix scroll with keyboard when overflow is applied

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,7 @@
 
 /* custom scrollbar */
 ::-webkit-scrollbar {
-  width: 17px;
-  scrollbar-width: thin;
+  width: 20px;
 }
 
 ::-webkit-scrollbar-track {
